@@ -2,11 +2,9 @@ import org.xml.sax.Attributes;
 import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Set;
-import java.util.HashSet;
-import java.util.Arrays;
-import java.util.ArrayList;
 
 /**
  *  Parses OSM XML files using an XML SAX parser. Used to construct the graph of roads for
@@ -20,10 +18,10 @@ import java.util.ArrayList;
  *
  *  You may find the CSCourseGraphDB and CSCourseGraphDBHandler examples useful.
  *
- *  The idea here is that some external library is going to walk through the XML
- *  file, and your override method tells Java what to do every time it gets to the next
- *  element in the file. This is a very common but strange-when-you-first-see it pattern.
- *  It is similar to the Visitor pattern we discussed for graphs.
+ *  The idea here is that some external library is going to walk through the XML file, and your
+ *  override method tells Java what to do every time it gets to the next element in the file. This
+ *  is a very common but strange-when-you-first-see it pattern. It is similar to the Visitor pattern
+ *  we discussed for graphs.
  *
  *  @author Alan Yao, Maurice Lee
  */
@@ -34,10 +32,11 @@ public class GraphBuildingHandler extends DefaultHandler {
      * roads, but in practice we walk all over them with such impunity that we forget cars can
      * actually drive on them.
      */
-    private static final Set<String> ALLOWED_HIGHWAY_TYPES = new HashSet<>(Arrays.asList
-            ("motorway", "trunk", "primary", "secondary", "tertiary", "unclassified",
-                    "residential", "living_street", "motorway_link", "trunk_link", "primary_link",
-                    "secondary_link", "tertiary_link"));
+    private static final Set<String> ALLOWED_HIGHWAY_TYPES = Set.of(
+            "motorway", "trunk", "primary", "secondary", "tertiary", "unclassified", "residential",
+            "living_street", "motorway_link", "trunk_link", "primary_link", "secondary_link",
+            "tertiary_link"
+    );
     private String activeState = "";
     private final GraphDB g;
     private GraphDB.Node lastNode;
@@ -60,12 +59,12 @@ public class GraphBuildingHandler extends DefaultHandler {
     /**
      * Called at the beginning of an element. Typically, you will want to handle each element in
      * here, and you may want to track the parent element.
-     * @param uri The Namespace URI, or the empty string if the element has no Namespace URI or
-     *            if Namespace processing is not being performed.
-     * @param localName The local name (without prefix), or the empty string if Namespace
-     *                  processing is not being performed.
-     * @param qName The qualified name (with prefix), or the empty string if qualified names are
-     *              not available. This tells us which element we're looking at.
+     * @param uri The Namespace URI, or the empty string if the element has no Namespace URI or if
+     *            Namespace processing is not being performed.
+     * @param localName The local name (without prefix), or the empty string if Namespace processing
+     *                  is not being performed.
+     * @param qName The qualified name (with prefix), or the empty string if qualified names are not
+     *              available. This tells us which element we're looking at.
      * @param attributes The attributes attached to the element. If there are no attributes, it
      *                   shall be an empty Attributes object.
      * @throws SAXException Any SAX exception, possibly wrapping another exception.
@@ -74,8 +73,7 @@ public class GraphBuildingHandler extends DefaultHandler {
     @Override
     public void startElement(String uri, String localName, String qName, Attributes attributes)
             throws SAXException {
-        /* Some example code on how you might begin to parse XML files. */
-        if (qName.equals("node")) { // We encountered a new <node...> tag.
+        if (qName.equals("node")) { // Encountering a new <node...> tag.
             activeState = "node";
 
             long id = Long.parseLong(attributes.getValue("id"));
@@ -85,49 +83,26 @@ public class GraphBuildingHandler extends DefaultHandler {
             GraphDB.Node n = new GraphDB.Node(id, lon, lat);
             g.addNode(id, n);
             lastNode = n;
-
-        } else if (qName.equals("way")) { // We encountered a new <way...> tag.
+        } else if (qName.equals("way")) { // Encountering a new <way...> tag.
             activeState = "way";
-            //System.out.println("Beginning a way...");
             wayInfo.clear();
             connections.clear();
-
-        } else if (activeState.equals("way") && qName.equals("nd")) { // While looking at a way, we found <nd...> tag.
-            //System.out.println("Id of a node in this way: " + attributes.getValue("ref"));
-
-            /* TODO Use the above id to make "possible" connections between the nodes in this way */
-            /* Hint1: It would be useful to remember what was the last node in this way. */
-            /* Hint2: Not all ways are valid. So, directly connecting the nodes here would be
-            cumbersome since you might have to remove the connections if you later see a tag that
-            makes this way invalid. Instead, think of keeping a list of possible connections and
-            remember whether this way is valid or not. */
+        } else if (activeState.equals("way") && qName.equals("nd")) { // While looking at a way, found <nd...> tag.
             connections.add(Long.parseLong(attributes.getValue("ref")));
-
         } else if (activeState.equals("way") && qName.equals("tag")) {
-            /* While looking at a way, we found a <tag...> tag. */
+            /* While looking at a way, found a <tag...> tag. */
             String k = attributes.getValue("k");
             String v = attributes.getValue("v");
             if (k.equals("maxspeed")) {
-                // System.out.println("Max Speed: " + v);
-                /* TODO set the max speed of the "current way" here. */
                 wayInfo.put(k, v);
             } else if (k.equals("highway")) {
-                //System.out.println("Highway type: " + v);
-                /* TODO Figure out whether this way and its connections are valid. */
-                /* Hint: Setting a "flag" is good enough! */
                 validWay = ALLOWED_HIGHWAY_TYPES.contains(v);
             } else if (k.equals("name")) {
-                //System.out.println("Way Name: " + v);
                 wayInfo.put(k, v);
             }
-            //System.out.println("Tag with k=" + k + ", v=" + v + ".");
+            // System.out.println("Tag with k=" + k + ", v=" + v + ".");
         } else if (activeState.equals("node") && qName.equals("tag") && attributes.getValue("k")
                 .equals("name")) {
-            /* While looking at a node, we found a <tag...> with k="name". */
-            /* TODO Create a location. */
-            /* Hint: Since we found this <tag...> INSIDE a node, we should probably remember which
-            node this tag belongs to. Remember XML is parsed top-to-bottom, so probably it's the
-            last node that you looked at (check the first if-case). */
             lastNode.extraInfo.put("name", attributes.getValue("v"));
         }
     }
@@ -146,10 +121,12 @@ public class GraphBuildingHandler extends DefaultHandler {
     @Override
     public void endElement(String uri, String localName, String qName) throws SAXException {
         if (qName.equals("way")) {
-            /* We are done looking at a way. (We finished looking at the nodes, speeds, etc...)*/
-            /* Hint1: If you have stored the possible connections for this way, here's your
-            chance to actually connect the nodes together if the way is valid. */
-            //System.out.println("Finishing a way...");
+            /* Done looking at a way. (Finished looking at the nodes, speeds, etc.) */
+
+            /* Hint: If you have stored the possible connections for this way, here's your chance to
+             * actually connect the nodes together if the way is valid. */
+
+            // System.out.println("Finishing a way...");
             if (validWay) {
                 for (int i = 1; i < connections.size(); i += 1) {
                     long n1 = connections.get(i - 1);
